[package]
description = "Extract Mindful Sessions from your Apple Health export data for use by Bloom"
name = "bloomparse"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2024 Meditation Mind"
OriginalFilename = "bloomparse.exe"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { version = "1.0.210", features = ["derive"] }
tinyfiledialogs = "3.9.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
winresource = "0.1"
